# CrimeLLM

./: .coverage  .env.example  .env.test.example  .gitignore  LICENSE.MIT-pre-relicense  Makefile  NOTICE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: sample.csv
data/eval/: seed.yaml
legacy/: finetune_classifier.py
notebooks/: base_model_bakeoff.ipynb  embedding_probe.ipynb  finetune.ipynb  rag_demo.ipynb  zero_shot_llm.ipynb
notebooks/classifier/: base_model_bakeoff.ipynb  finetune.ipynb  rag_demo.ipynb
notebooks/clg/: 01_download_data.ipynb  02_setup_database.ipynb  03_load_and_embed.ipynb  04_synthesize_query.ipynb  05_autofetch_demo.ipynb  query_demo.ipynb
src/crimellm/: __init__.py  _http.py  config.py  corpora.py  data.py  embed_probe.py  env.py  inference.py  rag.py  train.py  training_config.py  zero_shot.py
src/crimellm/classifier/: README.md  __init__.py  config.py  corpora.py  data.py  device.py  embed_probe.py  inference.py  rag.py  train.py  zero_shot.py
src/crimellm/clg/: README.md  __init__.py  cli.py  config.py  models.py
src/crimellm/clg/autofetch/: README.md  __init__.py  cascade.py  circuit_breaker.py  exceptions.py  integration.py  quarantine.py  queue.py  resolver.py  worker.py
src/crimellm/clg/cli/: README.md  __init__.py  _common.py  autofetch.py  graph.py  ingest.py  link.py  load.py  parse.py
src/crimellm/clg/embed/: README.md  __init__.py  chunker.py  embedder.py
src/crimellm/clg/eval/: README.md  __init__.py  metrics.py  report.py  runner.py  schema.py
src/crimellm/clg/graph/: README.md  __init__.py  driver.py  loaders.py  schema.py
src/crimellm/clg/ingest/: README.md  __init__.py  _base.py  courtlistener.py  domstol.py  eurlex.py  find_case_law.py  karnov.py  legislation_uk.py  retsinformation.py
src/crimellm/clg/link/: README.md  __init__.py  citation_context.py  cite_dk.py  cite_eu.py  cite_registry.py  cite_us.py  distill.py  train_distilled.py  treatment_anthropic.py  treatment_base.py  treatment_cascade.py  treatment_distilled.py  treatment_local_llm.py  treatment_rules.py  treatment_rules_dk.py  treatment_rules_eu.py
src/crimellm/clg/parse/: README.md  __init__.py  courtlistener.py  domstol.py  eurlex.py  find_case_law.py  legislation_uk.py  retsinformation.py
src/crimellm/clg/retrieval/: README.md  __init__.py  expand.py  good_law.py  parse_query.py  prompts.py  query.py  rerank.py  seed.py  synthesize.py
src/crimellm/common/: README.md  __init__.py  device.py  http.py  language.py
tests/: conftest.py  test_classifier_config.py  test_env.py
tests/clg/: conftest.py  test_autofetch_cascade.py  test_autofetch_circuit_breaker.py  test_autofetch_cli.py  test_autofetch_e2e.py  test_autofetch_hardening.py  test_autofetch_observability.py  test_autofetch_provenance_flags.py  test_autofetch_quarantine.py  test_autofetch_query_integration.py  test_autofetch_queue.py  test_autofetch_resolver.py  test_autofetch_settings.py  test_autofetch_unsupported_cite.py  test_autofetch_worker.py  test_chunker.py  test_citation_context.py  test_cite_registry.py  test_cli.py  test_config.py  test_courtlistener_load.py  test_courtlistener_parse.py  test_distill.py  test_domstol_parse.py  test_e2e_dk_eu.py  test_embed_load.py  test_embedder.py  test_eurlex_fetch_one.py  test_eurlex_parse.py  test_eval_gate.py  test_eval_metrics.py  test_eval_schema.py  test_find_case_law_load.py  test_find_case_law_parse.py  test_legislation_uk_fetch_one.py  test_legislation_uk_load.py  test_legislation_uk_parse.py  test_load_implements.py  test_phase10_eval_filters.py  test_phase11_removal.py  (+19 more)
tests/clg/fixtures/courtlistener/: citations-2024-01-01.csv  courts-2024-01-01.csv  dockets-2024-01-01.csv  opinion-clusters-2024-01-01.csv  opinions-2024-01-01.csv
tests/clg/fixtures/domstol/: u-2023-1234-h.txt
tests/clg/fixtures/eurlex/: 32016R0679.en.fmx4.xml  32019L0770.en.fmx4.xml  62012CJ0131.en.fmx4.xml
tests/clg/fixtures/find_case_law/: ewca-crim-fraud-2015.xml
tests/clg/fixtures/legislation_uk/: ukpga-2006-35-current.xml  ukpga-2006-35-enacted.xml
tests/clg/fixtures/retsinformation/: lbk-2018-502.xml  lexdania-A20180050229.xml
tests/common/: test_language.py
