[project]
name = "crimellm"
version = "0.1.0"
description = "3-class crime classifier (fine-tune + zero-shot LLM) with RAG over US/UK statutes and case law."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Paolo Bozzini" }]
dependencies = [
    "transformers>=4.46",
    "datasets>=3.0",
    "evaluate>=0.4.3",
    "scikit-learn>=1.5",
    "accelerate>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "torch>=2.4",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "matplotlib>=3.9",
    "sentencepiece>=0.2",
    "protobuf>=5.0",
    "sentence-transformers>=3.2",
    "faiss-cpu>=1.8",
    "lxml>=5",
    "httpx>=0.27",
    "tqdm>=4.66",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
# Local zero-shot LLM via AirLLM. Quantization (bitsandbytes) is CUDA-only.
airllm = ["airllm>=2.11", "optimum>=1.13,<1.21"]
airllm-cuda = ["airllm>=2.11", "bitsandbytes>=0.43", "accelerate>=1.0", "optimum>=1.13,<1.21"]
# Mac MLX backend for AirLLM (auto-used on Darwin).
airllm-mlx = ["airllm>=2.11", "mlx>=0.18", "optimum>=1.13,<1.21"]
# Anthropic Claude API.
anthropic = ["anthropic>=0.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crimellm"]

# --- Cross-platform PyTorch --------------------------------------------------
# Mac (Apple Silicon) and Linux/CPU: default PyPI wheel (MPS supported on macOS).
# Windows + NVIDIA: pull from PyTorch CUDA 12.1 index.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]
