[project]
name = "crimellm"
version = "0.2.0"
description = "3-class crime classifier (fine-tune + zero-shot LLM) with RAG over US/UK statutes and case law."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Paolo Bozzini" }]
dependencies = [
    # Lean default install. Enough to run the clg graph pipeline + core utils.
    # ML-heavy bits (transformers, torch, sentence-transformers, faiss-cpu …)
    # are gated behind the `classifier` extra — see below.
    "httpx>=0.27",
    "lxml>=5",
    "tqdm>=4.66",
    "python-dotenv>=1.2.2",
    "pandas>=2.2",
    "numpy>=1.26",
]

# Extras at a glance:
#   classifier   — fine-tune InLegalBERT + FAISS RAG + zero-shot baselines (original stack)
#   clg          — Neo4j graph RAG pipeline over US + UK primary law (new stack)
#   anthropic    — Claude API (used by both stacks for zero-shot / synthesis / Phase 5 teacher)
#   airllm       — AirLLM local zero-shot (any platform)
#   airllm-cuda  — + bitsandbytes 4/8-bit (NVIDIA)
#   airllm-mlx   — + MLX backend (Apple Silicon)
#   dev          — pytest + ruff (contributor tools)
[project.optional-dependencies]
# Original stack: classifier fine-tune + FAISS RAG + embedding probe + zero-shot.
classifier = [
    "transformers>=4.46",
    "datasets>=3.0",
    "evaluate>=0.4.3",
    "scikit-learn>=1.5",
    "accelerate>=1.0",
    "torch>=2.4",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "matplotlib>=3.9",
    "sentencepiece>=0.2",
    "protobuf>=5.0",
    "sentence-transformers>=3.2",
    "faiss-cpu>=1.8",
]
# Local zero-shot LLM via AirLLM. Quantization (bitsandbytes) is CUDA-only.
airllm = ["airllm>=2.11", "optimum>=1.13,<1.21"]
airllm-cuda = ["airllm>=2.11", "bitsandbytes>=0.43", "accelerate>=1.0", "optimum>=1.13,<1.21"]
# Mac MLX backend for AirLLM (auto-used on Darwin).
airllm-mlx = ["airllm>=2.11", "mlx>=0.18", "optimum>=1.13,<1.21"]
# Anthropic Claude API.
anthropic = ["anthropic>=0.40"]
# Common Legal Graph (clg) pipeline: Neo4j graph RAG over US + UK primary law.
clg = [
    "neo4j>=5.26",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "eyecite>=2.6",
    "reporters-db>=3.2",
    "courts-db>=0.10",
    "voyageai>=0.3",
    "anthropic>=0.40",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
]
# Convenience: everything (classifier + clg + zero-shot LLM extras).
all = [
    "crimellm[classifier]",
    "crimellm[clg]",
    "crimellm[anthropic]",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.7"]

[project.scripts]
clg = "crimellm.clg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crimellm"]

# --- Cross-platform PyTorch --------------------------------------------------
# Mac (Apple Silicon) and Linux/CPU: default PyPI wheel (MPS supported on macOS).
# Windows + NVIDIA: pull from PyTorch CUDA 12.1 index.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]

# --- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers --cov=crimellm --cov-report=term-missing:skip-covered --no-cov-on-fail"
filterwarnings = [
    "ignore::DeprecationWarning:swigvarlink",
    "ignore::DeprecationWarning:SwigPy.*",
]

[tool.coverage.run]
source = ["src/crimellm"]
omit = [
    # Optional-import shims contain no executable logic worth measuring.
    "src/crimellm/config.py",
    "src/crimellm/training_config.py",
    # Notebook-only convenience modules.
    "src/crimellm/classifier/embed_probe.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# --- ruff (lint + format) ---------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "artifacts", "data"]

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle, I = isort, UP = pyupgrade, B = bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length: ruff format owns formatting; lint stays out of width
    "B008",  # function calls in default args (typer.Argument/Option pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False in tests is fine
# package-level __init__.py re-exports + optional-import shims
"src/crimellm/__init__.py" = ["F401"]
"src/crimellm/**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
